--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wandr - Landing Page</title>
+    <link rel="stylesheet" href="Style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <ul>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li class="logo"><a href="index.html">Wandr</a></li> <!-- Clickable logo with hover effect -->
+            <li><a href="download.html">Download App</a></li>
+            <li><a href="#login">Log In</a></li>
+        </ul>
+    </nav>
+
+    <!-- Mission Statement Section -->
+    <div class="missionbox">
+        <h1>Local Expertise for Global Travelers</h1>
+        <p>Personalized adventures, dining delights, and must-see sights</p>
+    </div>
+</body>
+
+</html>
