--- a/about.html
+++ b/about.html
@@ -32,13 +32,13 @@
                 at their destinations.</p>
             <p>Our app serves as your personal travel assistant, consolidating all relevant information into one
                 easy-to-use platform.</p>
-            <!-- Social Media Icons  <p>With tailored recommendations based on your interests and past experiences, we help you discover unique
+            <p>With tailored recommendations based on your interests and past experiences, we help you discover unique
                 local gems while avoiding commercial tourist traps.</p>
             <p>Wandr simplifies the planning process, allowing you to focus on enjoying your journey. Whether you’re
                 searching for hidden restaurants or cultural events, our app adapts to your preferences over time,
                 ensuring that your travel experience is both personalized and genuine.</p>-->
             <p>Download our app and join us in exploring the world with Wandr—your key to authentic adventures!</p>
-            <!-- Social Media Icons -->
+        <!-- Social Media Icons -->
             <div class="social-icons">
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-twitter"></a>
