--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                 local gems while avoiding commercial tourist traps.</p>
             <p>Wandr simplifies the planning process, allowing you to focus on enjoying your journey. Whether you’re
                 searching for hidden restaurants or cultural events, our app adapts to your preferences over time,
-                ensuring that your travel experience is both personalized and genuine.</p>-->
+                ensuring that your travel experience is both personalized and genuine.</p>
             <p>Download our app and join us in exploring the world with Wandr—your key to authentic adventures!</p>
         <!-- Social Media Icons -->
             <div class="social-icons">
